k8s/backend.deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 3
  minReadySeconds: 10
  selector:
      matchLabels:
        app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - image: gabriel-eb/puffy
        imagePullPolicy: IfNotPresent
        name: backend
        resources: {}
