k8s/database.deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database
spec:
  replicas: 2
  minReadySeconds: 10
  selector:
      matchLabels:
        app: database
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: database
    spec:
      containers:
      - image: mysql:8
        name: database
        ports:
        - containerPort: 3306
          name: database
          protocol: TCP
        volumeMounts:
        - name: database-local-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: database-local-storage
        persistentVolumeClaim:
          claimName: database-pvc
