k8s/backend.service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-lb
spec:
  clusterIP: None
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 3030
      targetPort: 3030

---

apiVersion: v1
kind: Service
metadata:
  name: dashboard-lb
spec:
  clusterIP: None
  selector:
    app: dashboard
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3031

---

apiVersion: v1
kind: Service
metadata:
  name: database-lb
spec:
  clusterIP: None
  selector:
    app: database
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
