k8s/cache.statefulset.yml
apiVersion: v1
kind: Service
metadata:
  name: cache
spec:
  clusterIP: None
  ports:
  - port: 6379
    targetPort: 6379
    name: cache
  selector:
    app: cache

---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: cache
spec:
  serviceName: cache
  replicas: 3
  selector:
    matchLabels:
      app: cache
  template:
    metadata:
      labels:
        app: cache
    spec:
      containers:
      - name: cache
        image: redis:7.0-alpine
        command: ["redis-server"]
        args: ["/etc/redis/redis.conf"]
        ports:
        - containerPort: 6379
          name: cache
        volumeMounts:
        - name: data
          mountPath: /data
        - name: cache-config
          mountPath: /etc/redis/
      volumes:
      - name: cache-config
        emptyDir: {}
      - name: config
        configMap:
          name: cache-config
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: "cache-local-storage"
      resources:
        requests:
          storage: 50Mi
