k8s/loadbalancer.service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-lb
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9376

---

apiVersion: v1
kind: Service
metadata:
  name: dashboard-lb
spec:
  selector:
    app: dashboard
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9377

---

apiVersion: v1
kind: Service
metadata:
  name: cache-lb
spec:
  selector:
    app: dashboard
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9378

---

apiVersion: v1
kind: Service
metadata:
  name: database-lb
spec:
  selector:
    app: dashboard
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9379
