k8s/ingress.service.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-entrypoint
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-origin: "http://puffy.com"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dashboard-lb
            port:
              number: 80
      # - path: /
      #   pathType: Prefix
      #   backend:
      #     service:
      #       name: backend-lb
      #       port:
      #         number: 80
